# ESE519_MoodLight_midpoint_check

./: README.md
YuchenWang_Arduino_code/: Test.ino
YuchenWang_midpoint_check/: CmakeLists.txt  project.c
arduino-demo1/: i2c-test.py  testi2c.c.ino
pico-tflmicro-main/examples/person_detection/: main.cpp  main_functions.cpp
pico_i2c_slave-master/: CMakeLists.txt
pico_i2c_slave-master/example_mem/: example_mem.c
pico_i2c_slave-master/example_mem_master/: CMakeLists.txt  example_mem_master.c
pico_i2c_slave-master/example_mem_slave/: CMakeLists.txt  example_mem_slave.c
